// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
        width="auto"
      >
        <div
          class="Badge-sc-1mhw5si-0 gayll"
        >
          75
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          USDC
        </div>
        <svg
          class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <doublelogo
                currency0="[object Object]"
                currency1="[object Object]"
              />
              500
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          DAI
        </div>
      </div>
    </div>
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
        width="auto"
      >
        <div
          class="Badge-sc-1mhw5si-0 gayll"
        >
          25
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          USDC
        </div>
        <svg
          class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <doublelogo
                currency0="[object Object]"
                currency1="[object Object]"
              />
              3000
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <doublelogo
                currency0="[object Object]"
                currency1="[object Object]"
              />
              10000
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          DAI
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="Column__AutoColumn-sc-1kykgp9-2 bXKOWF"
    >
      <div
        class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
        width="auto"
      >
        <div
          class="Badge-sc-1mhw5si-0 gayll"
        >
          100
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          USDC
        </div>
        <svg
          class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
        <div
          class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
          width="auto"
        >
          <div
            class="Badge-sc-1mhw5si-0 gayll"
          >
            <div
              class="sc-bdnxRM Row-sc-nrd8cx-0 Row__AutoRow-sc-nrd8cx-3 fmeAVV drkpWa fRMqhK"
              width="auto"
            >
              <doublelogo
                currency0="[object Object]"
                currency1="[object Object]"
              />
              500
            </div>
          </div>
          <svg
            class="RoutingDiagram__StyledChevronRight-sc-o1ook0-0"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </div>
        <div
          class="theme__TextWrapper-sc-18nh1jk-0 isUuLU css-1kt4f20"
        >
          DAI
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  />
</DocumentFragment>
`;
